[gd_scene load_steps=6 format=3 uid="uid://bndsjvkllbomm"]

[ext_resource type="Script" uid="uid://dqyu40bl33kb2" path="res://Entities/Player.gd" id="1_1iada"]
[ext_resource type="Texture2D" uid="uid://j3sue7mcaru5" path="res://Images/asset16-character-idle.png" id="2_c7jvw"]
[ext_resource type="Texture2D" uid="uid://3s41ixyk2kfx" path="res://Images/lasso-small.png" id="3_0gd87"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ivoou"]
radius = 31.4006

[sub_resource type="CircleShape2D" id="CircleShape2D_ff0on"]
radius = 108.019

[node name="Player" type="CharacterBody2D"]
collision_mask = 3
motion_mode = 1
script = ExtResource("1_1iada")

[node name="PlayerSprite" type="Sprite2D" parent="."]
scale = Vector2(0.25, 0.25)
texture = ExtResource("2_c7jvw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ivoou")

[node name="LassoTarget" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="LassoTarget"]
shape = SubResource("CircleShape2D_ff0on")
debug_color = Color(0.953565, 1.82897e-06, 0.552917, 0.42)

[node name="Sprite2D" type="Sprite2D" parent="LassoTarget"]
modulate = Color(1, 1, 1, 0.454902)
scale = Vector2(0.4, 0.4)
texture = ExtResource("3_0gd87")

[node name="LassoVisual" type="Sprite2D" parent="."]
scale = Vector2(0.4, 0.4)
texture = ExtResource("3_0gd87")

[node name="AudioListener2D" type="AudioListener2D" parent="."]
current = true

[connection signal="body_entered" from="LassoTarget" to="." method="_on_lasso_body_entered"]
[connection signal="body_exited" from="LassoTarget" to="." method="_on_lasso_body_exited"]
